webapp/v2/mongo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo-pod
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          resources:
            requests:
              memory: 200Mi
              cpu: 100m
            limits:
              memory: 200Mi
              cpu: 200m
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db # dossier où mongodb enregistre ses données
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
