webapp/v2/lb-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lb-ing
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true' # utilisation des expressions régulières pour le routage
spec:
  rules:
  - host: habit.com
    http:
      paths:
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: server-svc
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-svc
            port:
              number: 3000
